--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 PORT=5000
 DB_URL=mongodb+srv://admin:admin@cluster0.ude3v.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+SECRET=pawellesnik
