--- a/client/.env
+++ b/client/.env
@@ -2,3 +2,4 @@ HOSTNAME=localhost
 PORT=5000
 HOST=http://$HOSTNAME:$PORT
 BASE_URL=https://formajestpro.herokuapp.com
+NEXT_PUBLIC_BASE_URL=https://formajestpro.herokuapp.com
